--- a/index.html
+++ b/index.html
@@ -154,6 +154,6 @@
                 <p>Learn to Code, Learn to be Creative.</p>
             </div>
         </footer>
-        <script src="../js/script.js"></script>
+        <script src="./js/script.js"></script>
     </body>
 </html>
